--- a/projects/sandstrasse.html
+++ b/projects/sandstrasse.html
@@ -5,13 +5,11 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bailey | Thursday</title>
-    <meta name="description" content="“We bend metal,” this family firm told us. Naturally, our first question was “Why? And why should people come to you?” It’s not always easy for a...">
+    <title>Sandstrasse | Euphorie AG</title>
     <meta name="keywords" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../assets/css/app30f1.css">
-    <meta name="csrf-token" content="nkzgrYLewCvdRws2WPZgQ7IgJskxKiiwGPcjZu4u">
-    <meta name="recaptcha-key" content="6LcsJ90ZAAAAAK796fkJyLP4AE4dORLStGi05n4e">
+
     <meta property="og:title" content="Bailey | Thursday">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
@@ -145,23 +143,23 @@
                     Wohn- und Gewerbehaus</span></p><br>
 
                     <p><strong>Bauherr:</strong><br>
-                        <span style="font-size: smaller; font-color:rgb(184, 184, 184);">
+                        <span style="font-size: smaller; font-color:rgb(187, 187, 187);">
                         Euphorie AG</span></p><br>
 
 
                     <p><strong>Standort:</strong><br> <span style="font-size: smaller; font-color:rgb(184, 184, 184);">Sandstrasse 33 und 35<br> 5712 Beinwil am See</span></p>
 
                     <p><strong>Parzelle Nummer:</strong><br>
-                        <span style="font-size: smaller; font-color:rgb(184, 184, 184);">
+                        <span style="font-size: smaller; font-color:rgb(189, 189, 189);">
                     Grundbuch Beinwil am See,<br> 
                     Parzelle 2114</span></p><br>
 
                     <p><strong>Grundstücksfläche:</strong><br>
-                        <span style="font-size: smaller; font-color:rgb(184, 184, 184);">
+                        <span style="font-size: smaller; font-color:rgb(189, 189, 189);">
                   2‘666 m2 (26,66 Aren)</span></p><br>
 
                     <p><strong>Projektierung:</strong><br>
-                        <span style="font-size: smaller; font-color:rgb(184, 184, 184);">
+                        <span style="font-size: smaller; font-color:rgb(187, 187, 187);">
                 2016 – 2017</span></p><br>
 
 
@@ -169,24 +167,19 @@
                 </div>
             </ul>
             <div class="max-w-3xl type-base mt-12 md:mt-0">
+                <h2 class="p1"><span class="s1">WEB DESIGN + BUILD</span></h2>
+
                 “We bend metal,” this family firm told us. Naturally, our first question was “Why? And why should people come to you?” It’s not always easy for a client to answer, especially if they are straight-forward, metal-bending men-of-few-words. In truth, Bailey
                 are specialists in the design and manufacture of high-quality architectural facades and roofing systems. So with encouragement, investigation and inspiration, we helped them to see what was unique about their business, and worth shouting
                 about.
             </div>
         </section>
+
         <section class="container site-section fade-in">
 
             <picture>
-                <source srcset="../assets/img/projects/sandstrasse/indoors01.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/sandstrasse/indoors01.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/sandstrasse/indoors01.jpg" class="w-full " alt="Logo green">
-            </picture>
-        </section>
-        <section class="container site-section fade-in">
-
-            <picture>
-                <source srcset="../assets/img/projects/sandstrasse/indoors01.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/sandstrasse/indoors01.jpg" media="(min-width: 640px)">
+                <source srcset="../assets/img/projects/sandstrasse/indoors02.jpg" media="(min-width: 1200px)">
+                <source srcset="../assets/img/projects/sandstrasse/indoors02.jpg" media="(min-width: 640px)">
                 <img src="../assets/img/projects/sandstrasse/indoors02.jpg" class="w-full " alt="Logo green">
             </picture>
         </section>
@@ -206,37 +199,14 @@
             </p>
             <p class="p2"><span class="s1">The Tone of Voice reinforced the family feel, with a no-jargon approachability and the customer’s needs put first. Differentiation was delivered by putting a warm human tone into a traditionally technical sector. The job of bringing the variously named systems and products into consistent brand language was then explored to reinforce our essence of Stronger Together.</span></p>
         </section>
-        <section class="container site-section fade-in">
 
-            <picture>
-                <source srcset="../assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/sandstrasse/outdoors01.jpg" class="w-full " alt="Logo green">
-            </picture>
-        </section>
-        <section class="container site-section fade-in">
-
-            <picture>
-                <source srcset="../assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/sandstrasse/outdoors01.jpg" class="w-full " alt="Logo green">
-            </picture>
-        </section>
-        <section class="container site-section fade-in">
-
-            <picture>
-                <source srcset="../assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 1200px)">
-                <source srcset="../assets/img/projects/sandstrasse/outdoors01.jpg" media="(min-width: 640px)">
-                <img src="../assets/img/projects/sandstrasse/outdoors01.jpg" class="w-full " alt="Logo green">
-            </picture>
-        </section>
 
         <section class="container-3xl--right site-section--narrow cms-copy fade-in">
             <h2 class="p1"><span class="s1">WEB DESIGN + BUILD</span></h2>
             <p class="p1"><span class="s1">Although not an e-commerce site, the complicated combinations of products and variants needed to be made accessible and attractive to Bailey’s customers. We provided numerous solutions to solve the challenges of how such a diverse and overlapping range could be organised and displayed. This raised questions that ultimately helped Bailey streamline their business. With the user’s needs first and foremost, we designed a really clear way to navigate a complicated world of roof tiles and gutters, that was nonetheless visually appealing. It all came together strongly and beautifully and the client had not one amend to make to the original design. The visual brand language, of open white spaces making it a clean and clear experience, and the graphic blocks applied to transitions and image crops, resulted in a site that was both functional and full of authentic personality.</span></p>
         </section>
         <section class="container-3xl--right site-section--narrow cms-copy fade-in">
-            <h2><a href="https://www.builtwithbailey.com/en" target="_blank" rel="noopener noreferrer">view website</a></h2>
+            <h2><a href="#" target="_blank" rel="noopener noreferrer">view website</a></h2>
         </section>
         <section class="container site-section fade-in">
             <full-width-slider inline-template>
@@ -370,19 +340,19 @@
             <div class="flex flex-col xl:flex-row xl:flex-wrap md:mb-16 xl:my-24 xl:leading-tight">
                 <ul class="flex flex-wrap flex-col lg:block my-12 md:my-16 xl:my-0 xl:w-1/2">
                     <li class="mr-5 xl:mr-0">
-                        <a href="https://www.instagram.com/thursday.studio/" target="_blank" rel="noreferrer noopener" class="relative instagram-link">Instagram</a>
+                        <a href="https://www.instagram.com//" target="_blank" rel="noreferrer noopener" class="relative instagram-link">Instagram</a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/company/thursdaystudio/" target="_blank" rel="noreferrer noopener" class="relative linkedin-link">Linkedin</a>
+                        <a href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener" class="relative linkedin-link">Linkedin</a>
                     </li>
                 </ul>
                 <address class="hidden lg:block not-italic">
-      <a href="https://www.google.com/maps/dir//Thursday,+Cromwell+House,+15+Andover+Rd,+Winchester+SO23+7BT/@51.068092,-1.318540, 12z/" target="_blank">
-        Floor 4 Cromwell House<br>
-        15 Andover Road<br>
-        Winchester SO23 7BT
-      </a>
-    </address>
+                    <a href="https://www.google.com/maps/dir//Euphorie AG, Haupstrasse 19, 5734 Reinach AG/@51.068092,-1.318540, 12z/" target="_blank">
+                      Euphorie AG<br>
+                      Haupstrasse 19<br>
+                      5734 Reinach AG
+                    </a>
+                  </address>
             </div>
             <div class="flex flex-col xl:flex-row xl:flex-wrap xl:flex-row-reverse xl:justify-end xl:min-h-28">
                 <newsletter></newsletter>
@@ -394,9 +364,7 @@
     </div>
     </div>
     </div>
-    <script src="../assets/js/app9004.js?id=22d8d5e31648de9089e6"></script>
+    <script src="../assets/js/app9004.js"></script>
 </body>
-
-<!-- Mirrored from thursday.studio/projects/bailey by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Jul 2021 10:00:16 GMT -->
 
 </html>
