--- a/projects/villa.html
+++ b/projects/villa.html
@@ -333,17 +333,17 @@
             <div class="flex flex-col xl:flex-row xl:flex-wrap md:mb-16 xl:my-24 xl:leading-tight">
                 <ul class="flex flex-wrap flex-col lg:block my-12 md:my-16 xl:my-0 xl:w-1/2">
                     <li class="mr-5 xl:mr-0">
-                        <a href="https://www.instagram.com/thursday.studio/" target="_blank" rel="noreferrer noopener" class="relative instagram-link">Instagram</a>
+                        <a href="https://www.instagram.com/#/" target="_blank" rel="noreferrer noopener" class="relative instagram-link">Instagram</a>
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/company/thursdaystudio/" target="_blank" rel="noreferrer noopener" class="relative linkedin-link">Linkedin</a>
+                        <a href="https://www.facebook.com/#/" target="_blank" rel="noreferrer noopener" class="relative linkedin-link">Facebook</a>
                     </li>
                 </ul>
                 <address class="hidden lg:block not-italic">
-      <a href="https://www.google.com/maps/dir//Thursday,+Cromwell+House,+15+Andover+Rd,+Winchester+SO23+7BT/@51.068092,-1.318540, 12z/" target="_blank">
-        Floor 4 Cromwell House<br>
-        15 Andover Road<br>
-        Winchester SO23 7BT
+      <a href="https://www.google.com/maps/dir//Euphorie AG, Haupstrasse 19, 5734 Reinach AG/@51.068092,-1.318540, 12z/" target="_blank">
+        Euphorie AG<br>
+        Haupstrasse 19<br>
+        5734 Reinach AG
       </a>
     </address>
             </div>
