--- a/projects/sandstrasse.html
+++ b/projects/sandstrasse.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../assets/css/app30f1.css">
 
-    <meta property="og:title" content="Bailey | Thursday">
+    <meta property="og:title" content="Sandstrasse | Euphorie">
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
     <meta property="og:url" content="sandstrasse.html">
@@ -40,7 +40,7 @@
           </a>
                     </li>
                     <li class="type-5xl md:-mt-2">
-                        <a href="../about.html">
+                        <a href="#">
             About
           </a>
                     </li>
@@ -50,7 +50,7 @@
           </a>
                     </li>
                     <li class="type-5xl md:-mt-2">
-                        <a href="../latest.html">
+                        <a href="#">
             Latest
           </a>
                     </li>
@@ -167,7 +167,6 @@
                 </div>
             </ul>
             <div class="max-w-3xl type-base mt-12 md:mt-0">
-                <h2 class="p1"><span class="s1">WEB DESIGN + BUILD</span></h2>
 
                 “We bend metal,” this family firm told us. Naturally, our first question was “Why? And why should people come to you?” It’s not always easy for a client to answer, especially if they are straight-forward, metal-bending men-of-few-words. In truth, Bailey
                 are specialists in the design and manufacture of high-quality architectural facades and roofing systems. So with encouragement, investigation and inspiration, we helped them to see what was unique about their business, and worth shouting
@@ -340,7 +339,7 @@
             <div class="flex flex-col xl:flex-row xl:flex-wrap md:mb-16 xl:my-24 xl:leading-tight">
                 <ul class="flex flex-wrap flex-col lg:block my-12 md:my-16 xl:my-0 xl:w-1/2">
                     <li class="mr-5 xl:mr-0">
-                        <a href="https://www.instagram.com//" target="_blank" rel="noreferrer noopener" class="relative instagram-link">Instagram</a>
+                        <a href="https://www.instagram.com/" target="_blank" rel="noreferrer noopener" class="relative instagram-link">Instagram</a>
                     </li>
                     <li>
                         <a href="https://www.facebook.com/" target="_blank" rel="noreferrer noopener" class="relative linkedin-link">Linkedin</a>
@@ -357,7 +356,7 @@
             <div class="flex flex-col xl:flex-row xl:flex-wrap xl:flex-row-reverse xl:justify-end xl:min-h-28">
                 <newsletter></newsletter>
                 <div class="xl:w-1/2 mt-16 xl:mt-0">
-                    <a href="../privacy.html" class="type-xs pb-2">Privacy Policy</a>
+                    <a href="#" class="type-xs pb-2">Privacy Policy</a>
                 </div>
             </div>
         </footer>
