--- a/events/no-more-bullsht.html
+++ b/events/no-more-bullsht.html
@@ -44,7 +44,7 @@
           </a>
                     </li>
                     <li class="type-5xl md:-mt-2">
-                        <a href="../about.html">
+                        <a href="#">
             About
           </a>
                     </li>
@@ -54,7 +54,7 @@
           </a>
                     </li>
                     <li class="type-5xl md:-mt-2">
-                        <a href="../latest.html">
+                        <a href="#">
             Latest
           </a>
                     </li>
@@ -271,7 +271,7 @@
                     <div class="flex flex-col xl:flex-row xl:flex-wrap xl:flex-row-reverse xl:justify-end xl:min-h-28">
                         <newsletter></newsletter>
                         <div class="xl:w-1/2 mt-16 xl:mt-0">
-                            <a href="../privacy.html" class="type-xs pb-2">Privacy Policy</a>
+                            <a href="#" class="type-xs pb-2">Privacy Policy</a>
                         </div>
                     </div>
                 </footer>
