--- a/projects/villa.html
+++ b/projects/villa.html
@@ -280,7 +280,7 @@
             <h2 class="type-3xl">Our other offerings...</h2>
             <ul class="border-b border-grey-450 mt-12 md:mt-24">
                 <li class="border-t border-grey-450 py-5 md:py-8">
-                    <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/somebody-pres-r2-v10-01.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/somebody-pres-r2-v10-01.jpg 2x'>" inline-template>
+                    <tooltip content="<img class='w-40 h-45' src='../assets/img/projects/villa/01.jpg' srcset='../assets/img/projects/villa/01.jpg 2x'>" inline-template>
                         <a class="type-base flex justify-between" href="">
                             <span class="text-black">Villa Hauptstrausse</span>
                             <span class="flex-shrink-0 ml-8">This Project</span>
@@ -288,7 +288,7 @@
                     </tooltip>
                 </li>
                 <li class="border-t border-grey-450 py-5 md:py-8">
-                    <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/posters-close.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/posters-close.jpg 2x'>" inline-template>
+                    <tooltip content="<img class='w-40 h-45' src='../assets/img/projects/sandstrasse/01.jpg' srcset='../assets/img/projects/sandstrasse/01.jpg 2x'>" inline-template>
                         <a class="type-base flex justify-between" href="sandstrasse.html">
                             <span class="text-black">Sandstrasse</span>
                             <span class="flex-shrink-0 ml-8">View Project</span>
@@ -296,25 +296,25 @@
                     </tooltip>
                 </li>
                 <li class="border-t border-grey-450 py-5 md:py-8">
-                    <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/tags.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/tags.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="#">
+                    <tooltip content="<img class='w-40 h-45' src='../assets/img/projects/baselgasse/01.jpg' srcset='../assets/img/projects/baselgasse/01.jpg 2x'>" inline-template>
+                        <a class="type-base flex justify-between" href="rebstockhalde.html">
                             <span class="text-black">Rebstockhalde</span>
                             <span class="flex-shrink-0 ml-8">View Project</span>
                         </a>
                     </tooltip>
                 </li>
                 <li class="border-t border-grey-450 py-5 md:py-8">
-                    <tooltip content="<img class='w-40 h-45' src='../assets/img/resized/related-thumbnail/spirit.jpg' srcset='https://thursday.studio/assets/img/resized/related-thumbnail@2x/spirit.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="#">
-                            <span class="text-black">Tipsy Cow</span>
+                    <tooltip content="<img class='w-40 h-45' src='../assets/img/projects/baselgasse/01.jpg' srcset='../assets/img/projects/baselgasse/01.jpg 2x'>" inline-template>
+                        <a class="type-base flex justify-between" href="baselgasse.html">
+                            <span class="text-black">Baselgasse</span>
                             <span class="flex-shrink-0 ml-8">View Project</span>
                         </a>
                     </tooltip>
                 </li>
                 <li class="border-t border-grey-450 py-5 md:py-8">
                     <tooltip content="<img class='w-40 h-45' src='../assets/img/projects/villa/01.jpg' srcset='../assets/img/projects/villa/01.jpg 2x'>" inline-template>
-                        <a class="type-base flex justify-between" href="#">
-                            <span class="text-black">Tipsy Cow</span>
+                        <a class="type-base flex justify-between" href="hauptstrausse2.html">
+                            <span class="text-black">Hauptstrausse</span>
                             <span class="flex-shrink-0 ml-8">View Project</span>
                         </a>
                     </tooltip>
@@ -357,9 +357,8 @@
     </div>
     </div>
     </div>
-    <script src="../assets/js/app9004.js?id=22d8d5e31648de9089e6"></script>
+    <script src="../assets/js/app9004.js"></script>
 </body>
 
-<!-- Mirrored from thursday.studio/projects/bailey by HTTrack Website Copier/3.x [XR&CO'2014], Thu, 22 Jul 2021 10:00:16 GMT -->
 
 </html>
